# django-course

./: pyproject.toml
app/: settings.py  urls.py
recipes/: views.py
recipes/static/recipes/css/: styles.css
recipes/templates/recipes/pages/: home.html
recipes/templates/recipes/partials/: footer.html  head.html  header.html  recipe.html  search.html
