[tool.poetry]
name = "django-course"
version = "0.1.0"
description = ""
authors = ["Vitor Pacheco <vitorpacheco2000@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
